--- a/00-Python Object and Data Structure Basics/05-Dictionaries.ipynb
+++ b/00-Python Object and Data Structure Basics/05-Dictionaries.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Make a dictionary with {} and : to signify a key and a value\n",
-    "my_dict = {'key1':'value1','key2':'value2'}"
+    "my_dict = {'key1':'value1','key1':'value2'}"
    ]
   },
   {
@@ -53,14 +53,12 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "'value2'"
-      ]
+      "text/plain": "'value2'"
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
    "source": [
@@ -459,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.9-final"
   }
  },
  "nbformat": 4,
